--- a/views/partials/map.html
+++ b/views/partials/map.html
@@ -1,7 +1,7 @@
 ﻿<div class="modal-header map-header">
     
     <div class="modal-title map-title">
-        <span class="h4">Autodealers Houses</span>
+        <span class="h4">Manufacturers</span>
         
         <!-- "Close" dialog button -->
         <button ng-click="ok()"
