--- a/views/partials/manufacturers.html
+++ b/views/partials/manufacturers.html
@@ -11,28 +11,34 @@
 
     <div class="row">
         <div class="col-md-12" ng-controller="ManufacturersController">
-            <div ng-repeat="manufacturer in manufacturers | filter:searchText"
+            <div ng-repeat="manufacturer in manufacturers.manufacturer | filter:searchText"
                  class="jumbotron">
                 <div class="row">
                     <div class="col-md-2">
-                        <img ng-show="manufacturer.ImageUrl === ''"
+                        <img ng-show="manufacturer.imgUrl === ''"
                              src="http://cdn.flaticon.com/png/256/66599.png"
                              class="img-circle img-responsive" />
-                        <img ng-show="manufacturer.ImageUrl != ''"
-                             src="{{manufacturer.ImageUrl}}"
+                        <img ng-show="manufacturer.imgUrl != ''"
+                             src="{{manufacturer.imgUrl}}"
                              class="img-circle img-responsive" />
                     </div>
                     <div class="col-md-5">
                         <div class="row">
                             <div class="col-md-12">
-                                <h3>Name: {{manufacturer.Name}}</h3>
+                                <h3>Name: {{manufacturer.name}}</h3>
                             </div>
                         </div>
-                        <div class="row">
+<!--                        <div class="row">
                             <div class="col-md-12">
-                                <h4>Rating: {{manufacturer.Rating}}</h4>
+                                <h4>Rating: </h4>
                             </div>
-                        </div>
+                        </div>-->
+                    </div>
+                     <div class="col-md-6 col-md-offset-1">
+                        <button type="button" class="btn btn-default"
+                                ng-click="manufacturersDataSrv.deleteDataById(manufacturer.id,deletionDone)">
+                            <span class="glyphicon glyphicon-delete" aria-hidden="true"></span>Delete
+                        </button>
                     </div>
                     <div class="col-md-5">
                         <p>
