--- a/views/partials/cars.html
+++ b/views/partials/cars.html
@@ -42,7 +42,7 @@
 			<h3 style="color: #fff; margin: 5% 0;">Unfortunately, there are no car offers at the moment :(</h3>
 		</div>
 
-        <div ng-repeat="car in cars.car | filter:searchText" class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <div ng-repeat="car in cars| filter:searchText" class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 
             <div class="panel car" style="padding: 15px;">
             
