--- a/views/partials/manufacturers.html
+++ b/views/partials/manufacturers.html
@@ -11,7 +11,7 @@
 
     <div class="row">
         <div class="col-md-12" ng-controller="ManufacturersController">
-            <div ng-repeat="manufacturer in manufacturers.manufacturer | filter:searchText"
+            <div ng-repeat="manufacturer in manufacturers | filter:searchText"
                  class="jumbotron">
                 <div class="row">
                     <div class="col-md-2">
