--- a/views/partials/map.html
+++ b/views/partials/map.html
@@ -24,13 +24,13 @@
 
 
             <marker ng-repeat="$man in data"
-                    id="shopMarkerId{{::$man.id}}"
-                    position="[{{::$man.lat}},{{::$man.lon}}]"
+                    id="shopMarkerId{{$man.id}}"
+                    position="[{{$man.lat}},{{$man.lon}}]"
                     anchorpoint=""
-                    icon="{{::getManImagePath($man)}}"
-                    shape="{{::iconShape}}"
+                    icon="{{getManImagePath($man)}}"
+                    shape="{{iconShape}}"
                     on-click="showInfoWindow(event, $man,'shopMarkerId'+$man.shop_id)"
-                    title="{{::$man.model}}">
+                    title="{{$man.model}}">
             </marker>
 
 
