--- a/views/partials/add-car.html
+++ b/views/partials/add-car.html
@@ -51,7 +51,7 @@
                         </div>
                     </div>
      <div class="form-group">
-                        <label for="VideoUrl" class="col-md-2 control-label">Image URL:</label>
+                        <label for="VideoUrl" class="col-md-2 control-label">Youtube URL:</label>
                         <div class="col-md-10">
                             <input id="VideoUrl" type="url" placeholder="e.g. http://youtube.com/something" ng-model="car.videoUrl" class="form-control" />
                         </div>
