--- a/views/partials/cars.html
+++ b/views/partials/cars.html
@@ -36,7 +36,7 @@
 		</div>
 	</div>
 
-	<div class="row" ng-controller="CarsController">
+	<div class="row">
 	
 		<div ng-if="!cars" class="col-md-12 text-center">
 			<h3 style="color: #fff; margin: 5% 0;">Unfortunately, there are no car offers at the moment :(</h3>
