--- a/views/partials/manufacturers.html
+++ b/views/partials/manufacturers.html
@@ -10,43 +10,41 @@
     </div>
 
     <div class="row">
-        <div class="col-md-12" ng-controller="ManufacturersController">
-            <div ng-repeat="manufacturer in manufacturers | filter:searchText"
-                 class="jumbotron">
-                <div class="row">
-                    <div class="col-md-2">
-                        <img ng-show="manufacturer.imgUrl === ''"
-                             src="http://cdn.flaticon.com/png/256/66599.png"
-                             class="img-circle img-responsive" />
-                        <img ng-show="manufacturer.imgUrl != ''"
-                             src="{{manufacturer.imgUrl}}"
-                             class="img-circle img-responsive" />
-                    </div>
-                    <div class="col-md-5">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <h3>Name: {{manufacturer.name}}</h3>
-                            </div>
-                        </div>
-<!--                        <div class="row">
-                            <div class="col-md-12">
-                                <h4>Rating: </h4>
-                            </div>
-                        </div>-->
-                    </div>
-                     <div class="col-md-6 col-md-offset-1">
-                        <button type="button" class="btn btn-default"
-                                ng-click="manufacturersDataSrv.deleteDataById(manufacturer.id,deletionDone)">
-                            <span class="glyphicon glyphicon-delete" aria-hidden="true"></span>Delete
-                        </button>
-                    </div>
-                    <div class="col-md-5">
-                        <p>
+        <div class="col-md-12">
 
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
+			<div class="row">
+				<div ng-repeat="manufacturer in manufacturers | filter:searchText"
+					class="col-md-6">
+
+					<div class="well">
+						<div class="row">
+							<div class="col-md-3" style="height: 100px;">
+									 
+								<img ng-if="manufacturer.imgUrl != ''"
+									 src="{{::manufacturer.imgUrl}}"
+									 onerror="this.src='http://elsafamaids.net/Media/noimg.jpg';"
+									 class="img-responsive"
+									 style="max-height: 100px;" />
+							</div>
+							<div class="col-md-5">
+								<div class="row">
+									<div class="col-md-12">
+										<h3 style="font-weight: bold; margin: 0;">{{::manufacturer.name}}</h3>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-4">
+								<button type="button" class="btn btn-default pull-right" style="opacity: 1;"
+									ng-click="manufacturersDataSrv.deleteDataById(manufacturer.id,deletionDone)">
+									<span class="glyphicon glyphicon-delete" aria-hidden="true"></span>Delete
+								</button>
+							</div>
+						</div>
+					</div>
+					
+				</div>
+			</div>
+			
+		</div>
     </div>
 </div>
