--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,7 @@
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
+
 map, div[map] {
     display: block;
     width: 100%;
@@ -63,14 +67,6 @@ input.ng-dirty.ng-valid.validity {
     margin-right: -4px;
 }
 
-.big-text {
-    font-size: 2em;
-}
-
-[ng\:cloak], [ng-cloak], .ng-cloak {
-  display: none !important;
-}
-
 body {
     background: url("../img/index.jpg") no-repeat center center fixed;
     min-height: 100%;
@@ -82,7 +78,7 @@ body {
 	color: #fff;
 }
 
-.car { margin: 0; }
+.car { margin: 15px 0; }
 .car:hover + .comments {
     z-index: 10;
     visibility: visible;
