--- a/views/partials/cars.html
+++ b/views/partials/cars.html
@@ -1,4 +1,4 @@
-<div class="container" style="background-color: black; opacity: 0.85;">
+<div class="container" style="background-color: rgba(0, 0, 0, 0.90); padding-bottom: 4%;">
 
 	<div class="row">
 		<div class="col-md-12">
@@ -28,7 +28,7 @@
 					<div class="col-md-12">
 						<input ng-model="searchText" class="form-control center-block"
 							type="text" placeholder="Search for a specific car model..."
-							style="max-width: 500px;" />
+							style="max-width: 500px; margin-top: 25px; margin-bottom: 25px;" />
 					</div>
 				</div>
 			</div>
@@ -37,75 +37,78 @@
 	</div>
 
 	<div class="row">
-	
+
 		<div ng-if="!cars" class="col-md-12 text-center">
-			<h3 style="color: #fff; margin: 5% 0;">Unfortunately, there are no car offers at the moment :(</h3>
+			<h3 style="color: #fff; margin: 5% 0;">Unfortunately, there are
+				no car offers at the moment :(</h3>
 		</div>
 
-        <div ng-repeat="car in cars| filter:searchText" class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+		<div ng-repeat="car in cars| filter:searchText"
+			class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 
-            <div class="panel car" style="padding: 15px;">
-            
-                <div class="row">
-                    <div class="panel-title col-md-12" style="text-align:center; min-height: 50px;">
-                        <img src="{{car.imgUrl}}" class="img-responsive center-block" alt="No image found" />
-                    </div>
-                </div>
+			<div class="panel car" style="padding: 15px;">
 
-                <hr />
+				<div class="row">
+					<div class="panel-title col-md-12"
+						style="text-align: center; min-height: 50px;">
+						<img src="{{car.imgUrl}}"
+							onerror="this.src='https://www.gistnetwork.org/sites/default/files/noimage.png'"
+							class="img-responsive center-block"
+							style="max-height: 100px;"
+							alt="No image found" />
+					</div>
+				</div>
 
-                <div class="row">
-                    <div class="col-md-10 col-md-offset-1">
-                        <div class="h2 text-center" style="margin: 0 0 20px 0;">{{car.model}}</div>
-                        <table class="table table-hover table-responsive">
-                            <thead>
-                                <tr class="info">
-                                    <th>Attribute</th>
-                                    <th>Data</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Price: </td>
-                                    <td>{{car.price}}</td>
-                                </tr>
-                                <tr> <td>HorsePowers: </td>
-                                    <td>{{car.hp}}</td></tr>
-                                <tr>
-                                    <td>Year: </td>
-                                    <td>{{car.year}}</td>
-                                </tr>
-                                <tr>
-                                    <td>Manufacturer: </td>
-                                    <td>{{car.man.name}}</td>
-                                </tr>
-<!--                                <tr>
-                                    <td>Rating: </td>
-                                    <td>
-                                        {{car.Rating}}
-                                        <rating ng-model="" readonly="true"></rating>
-                                        <span class="label" ng-class="{'label-warning': percent<30, 'label-info': percent>=30 && percent<70, 'label-success': percent>=70}" ng-show="overStar && !isReadonly">{{percent}}%</span>
-                                    </td>
-                                </tr>-->
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+				<hr />
 
-                <div class="row">
-                    <div class="col-md-6 col-md-offset-1">
-                        <button type="button" class="btn btn-default">
-                            <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star it!
-                        </button>
-                    </div>
-                     <div class="col-md-6 col-md-offset-1">
-                        <button type="button" class="btn btn-default"
-                                ng-click="carsDataSrv.deleteDataById(car.id,deletionDone)">
-                            <span class="glyphicon glyphicon-delete" aria-hidden="true"></span>Delete
-                        </button>
-                    </div>
-                </div>
-            </div>
+				<div class="row">
+					<div class="col-md-10 col-md-offset-1">
+						<div class="h2 text-center" style="margin: 0 0 20px 0;">{{car.model}}</div>
+						<table class="table table-hover table-responsive">
+							<thead>
+								<tr class="info">
+									<th>Attribute</th>
+									<th>Data</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>Price:</td>
+									<td>{{car.price}}</td>
+								</tr>
+								<tr>
+									<td>HorsePowers:</td>
+									<td>{{car.hp}}</td>
+								</tr>
+								<tr>
+									<td>Year:</td>
+									<td>{{car.year}}</td>
+								</tr>
+								<tr>
+									<td>Manufacturer:</td>
+									<td>{{car.man.name}}</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-md-6">
+						<button type="button" class="btn btn-success btn-block">
+							<span class="glyphicon glyphicon-hd-video" aria-hidden="true"></span>
+							Play!
+						</button>
+					</div>
+					<div class="col-md-6">
+						<button type="button" class="btn btn-default btn-block"
+							ng-click="carsDataSrv.deleteDataById(car.id,deletionDone)">
+							<span class="glyphicon glyphicon-delete" aria-hidden="true"></span>Delete
+						</button>
+					</div>
+				</div>
+			</div>
+			<!--  
             <div class="comments">
                 <hr />
                 <div class="row">
@@ -117,6 +120,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
+            -->
+		</div>
+	</div>
 </div>
