--- a/css/app.css
+++ b/css/app.css
@@ -2,6 +2,10 @@
   display: none !important;
 }
 
+html {
+	overflow-y: scroll;
+}
+
 map, div[map] {
     display: block;
     width: 100%;
@@ -73,8 +77,7 @@ body {
 }
 
 .well {
-	background-color: black; 
-	opacity: 0.85;
+	background-color: rgba(0, 0, 0, 0.90);
 	color: #fff;
 }
 
