--- a/views/partials/cars.html
+++ b/views/partials/cars.html
@@ -43,14 +43,16 @@
 				no car offers at the moment :(</h3>
 		</div>
 
-		<div ng-repeat="car in cars| filter:searchText"
+		<div ng-repeat="car in cars| filter:searchText 
+		| range: 'price' : sliderPrice.minValue : sliderPrice.maxValue
+		| range: 'year' : sliderYear.minValue : sliderYear.maxValue"
 			class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
 
 			<div class="panel car" style="padding: 15px;">
 
 				<div class="row">
 					<div class="panel-title col-md-12"
-						style="text-align: center; min-height: 50px;">
+						style="text-align: center; min-height: 100px;">
 						<img src="{{car.imgUrl}}"
 							onerror="this.src='https://www.gistnetwork.org/sites/default/files/noimage.png'"
 							class="img-responsive center-block"
