--- a/views/partials/cars.html
+++ b/views/partials/cars.html
@@ -97,7 +97,8 @@
 
 				<div class="row">
 					<div class="col-md-6">
-						<button type="button" class="btn btn-success btn-block">
+						<button type="button" class="btn btn-success btn-block"
+                                                        ng-click="ytbDialog(car,'lg')">
 							<span class="glyphicon glyphicon-hd-video" aria-hidden="true"></span>
 							Play!
 						</button>
