--- a/views/partials/add-car.html
+++ b/views/partials/add-car.html
@@ -1,89 +1,110 @@
 <div class="container" ng-controller="AddCarController">
 
-    <div>
-        <span us-spinner spinner-key="spinner-add-cars"></span>
-    </div>
+	<div>
+		<span us-spinner spinner-key="spinner-add-cars"></span>
+	</div>
 
-    <div class="row">
-        <div class="col-md-12 well">
-            <form name="addCarForm" class="form-horizontal">
-                <fieldset>
-                    <legend class="text-center h2">Add new car</legend>
+	<div class="row">
+		<div class="col-md-12 well">
+			<form name="addCarForm" class="form-horizontal">
+				<fieldset>
+					<legend class="text-center h2">Add new car</legend>
 
-                    <div class="form-group">
-                        <label for="car-model" class="col-md-2 control-label">
-                            <span class="text-danger">*</span>Info:
-                        </label>
-                        <div class="col-md-10">
-                            <input id="car-model" type="text" placeholder="model, engine etc." ng-model="car.model" required="required" class="form-control" />
-                        </div>
-                    </div>
+					<div class="form-group">
+						<label for="Manufacturer" class="col-md-2 col-sm-2 control-label">
+							<span class="text-danger">*</span>Manufacturer:
+						</label>
+						<div class="col-md-8 col-sm-10">
+							<select id="Manufacturer"
+								ng-options="man.name for man in mans track by man.id"
+								ng-model="car.manId" required="required" class="form-control">
+							</select>
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="car-model" class="col-md-2 col-sm-2 control-label">
+							<span class="text-danger">*</span>Model:
+						</label>
+						<div class="col-md-8 col-sm-10">
+							<input id="car-model" type="text"
+								placeholder="e.g. 207, Golt 4 etc." ng-model="car.model"
+								required="required" class="form-control" />
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="Year" class="col-md-2 col-sm-2 control-label">
+							<span class="text-danger">*</span>Year:
+						</label>
+						<div class="col-md-8 col-sm-10">
+							<input id="Year" type="number"
+								placeholder="first registration of the car" ng-model="car.year"
+								required="required" class="form-control" />
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="HorsePowers" class="col-md-2 col-sm-2 control-label">
+							<span class="text-danger">*</span>Horse power:
+						</label>
+						<div class="col-md-8 col-sm-10">
+							<input id="hp" type="number" placeholder="e.g. 180"
+								ng-model="car.hp" required="required" class="form-control" />
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="Price" class="col-md-2 col-sm-2 control-label">
+							<span class="text-danger">*</span>Price:
+						</label>
+						<div class="col-md-8 col-sm-10">
+							<input id="Price" type="number" placeholder="new price"
+								ng-model="car.price" required="required" class="form-control" />
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="ImageUrl" class="col-md-2 col-sm-2 control-label">Image
+							URL:</label>
+						<div class="col-md-8 col-sm-10">
+							<input id="ImageUrl" type="url"
+								placeholder="e.g. http://abc.com/img.jpg" ng-model="car.imgUrl"
+								class="form-control" />
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="VideoUrl" class="col-md-2 col-sm-2 control-label">Youtube
+							URL:</label>
+						<div class="col-md-8 col-sm-10">
+							<input id="VideoUrl" type="url"
+								placeholder="e.g. http://youtube.com/something"
+								ng-model="car.videoUrl" class="form-control" />
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-md-3 col-md-offset-3 col-sm-6">
+							<button ng-click="postCarData(car, addCarForm)"
+								class="btn btn-success btn-block"
+								style="margin: 15px 0;">Create</button>
+						</div>
+						<div class="col-md-3 col-sm-6">
+							<a href="#/" class="btn btn-warning btn-block" style="margin: 15px 0;">Cancel</a>
+						</div>
+					</div>
+				</fieldset>
+			</form>
 
-                    <div class="form-group">
-                        <label for="Year" class="col-md-2 control-label">
-                            <span class="text-danger">*</span>Year:
-                        </label>
-                        <div class="col-md-10">
-                            <input id="Year" type="number" placeholder="first registration of the car" ng-model="car.year" required="required" class="form-control" />
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="HorsePowers" class="col-md-2 control-label">
-                            <span class="text-danger">*</span>Power:
-                        </label>
-                        <div class="col-md-10">
-                            <input id="hp" type="number" placeholder="e.g. 180 hp" ng-model="car.hp" required="required" class="form-control" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="Price" class="col-md-2 control-label">
-                            <span class="text-danger">*</span>Price:
-                        </label>
-                        <div class="col-md-10">
-                            <input id="Price" type="number" placeholder="e.g. 180 hp" ng-model="car.price" required="required" class="form-control" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="ImageUrl" class="col-md-2 control-label">Image URL:</label>
-                        <div class="col-md-10">
-                            <input id="ImageUrl" type="url" placeholder="e.g. http://abc.com/img.jpg" ng-model="car.imgUrl" class="form-control" />
-                        </div>
-                    </div>
-     <div class="form-group">
-                        <label for="VideoUrl" class="col-md-2 control-label">Youtube URL:</label>
-                        <div class="col-md-10">
-                            <input id="VideoUrl" type="url" placeholder="e.g. http://youtube.com/something" ng-model="car.videoUrl" class="form-control" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="Manufacturer" class="col-md-2 control-label">
-                            <span class="text-danger">*</span>Manufacturer:
-                        </label>
-                        <div class="col-md-10">
-                            <select id="Manufacturer"  
-                                    ng-options="man.name for man in mans track by man.id" 
-                                    ng-model="car.manId"required="required" class="form-control">
-                        </div>
-                    </div>
-
-                    <div class="pull-right">
-                        <input type="submit" ng-click="postCarData(car, addCarForm)" ng-disabled="!addCarForm.$valid" class="btn btn-primary" value="Create" />
-                        <a href="#/" class="btn btn-warning">Cancel</a>
-                    </div>
-                </fieldset>
-            </form>
-
-            <div ng-if="status.done && status.error === 1" class="alert text-danger text-center" style="margin: 0;">
-                <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-                <span style="margin-right: 30px; ">Status: {{msg}}</span>
-                <button class="btn btn-default" type="button" ng-click="anotherOne()">Try again</button>
-            </div>
-            <div ng-if="status.done && status.error === 0" class="alert text-success text-center" style="margin: 0;">
-                <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
-                <span style="margin-right: 30px; ">Status: {{msg}}</span>
-                <button class="btn btn-default" type="button" ng-click="anotherOne()">Continue</button>
-            </div>
-        </div>
-    </div>
+			<div ng-if="status.done && status.error === 1"
+				class="alert text-danger text-center" style="margin: 0;">
+				<span class="glyphicon glyphicon-exclamation-sign"
+					aria-hidden="true"></span> <span style="margin-right: 30px;">Status:
+					{{msg}}</span>
+				<button class="btn btn-default" type="button"
+					ng-click="anotherOne()">Try again</button>
+			</div>
+			<div ng-if="status.done && status.error === 0"
+				class="alert text-success text-center" style="margin: 0;">
+				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> <span
+					style="margin-right: 30px;">Status: {{msg}}</span>
+				<button class="btn btn-default" type="button"
+					ng-click="anotherOne()">Continue</button>
+			</div>
+		</div>
+	</div>
 </div>
