--- a/views/partials/add-manufacturer.html
+++ b/views/partials/add-manufacturer.html
@@ -13,52 +13,56 @@
 					<legend class="text-center h2">Add new manufacturer</legend>
 
 					<div class="form-group">
-						<label for="manufacturer-name" class="col-md-2 control-label">
+						<label for="manufacturer-name" class="col-md-2 col-sm-2 control-label">
 							<span class="text-danger">*</span>Name:
 						</label>
-						<div class="col-md-10">
+						<div class="col-md-8">
 							<input id="manufacturer-name" type="text"
 								placeholder="enter company name" ng-model="manufacturer.name"
 								required="required" class="form-control" />
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="manufacturer-lat" class="col-md-2 control-label">
+						<label for="manufacturer-lat" class="col-md-2 col-sm-2 control-label">
 							<span class="text-danger">*</span>Lat:
 						</label>
-						<div class="col-md-10">
+						<div class="col-md-8">
 							<input id="manufacturer-name" type="number" step="any"
 								placeholder="enter latitude" ng-model="manufacturer.lat"
 								required="required" class="form-control" />
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="manufacturer-name" class="col-md-2 control-label">
+						<label for="manufacturer-name" class="col-md-2 col-sm-2 control-label">
 							<span class="text-danger">*</span>Long:
 						</label>
-						<div class="col-md-10">
+						<div class="col-md-8">
 							<input id="manufacturer-name" type="number" step="any"
 								placeholder="enter longitude" ng-model="manufacturer.lon"
 								required="required" class="form-control" />
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="manufacturer-image" class="col-md-2 control-label">
+						<label for="manufacturer-image" class="col-md-2 col-sm-2 control-label">
 							<span class="text-danger">*</span>Logo URL:
 						</label>
-						<div class="col-md-10">
+						<div class="col-md-8">
 							<input id="manufacturer-image" type="text"
 								placeholder="e.g. http://abc.com/img.jpg"
 								ng-model="manufacturer.imgUrl" required="required"
 								class="form-control" />
 						</div>
 					</div>
-
-					<div class="pull-right">
-						<input type="submit"
-							ng-click="postManufacturerData(manufacturer, addManufacturerForm)"
-							ng-disabled="!addManufacturerForm.$valid" class="btn btn-primary"
-							value="Create" /> <a href="#/" class="btn btn-warning">Cancel</a>
+					
+					<div class="form-group">
+						<div class="col-md-3 col-md-offset-3 col-sm-6">
+							<button ng-click="postManufacturerData(manufacturer, addManufacturerForm)"
+								class="btn btn-success btn-block"
+								style="margin: 15px 0;">Create</button>
+						</div>
+						<div class="col-md-3 col-sm-6">
+							<a href="#/" class="btn btn-warning btn-block" style="margin: 15px 0;">Cancel</a>
+						</div>
 					</div>
 
 				</fieldset>
